# 700F

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  codex_freedv700f_instruction.md  versions.toml
docs/: README.md  architecture.md  ci.md  codec2_700d_700e_verification.md  codec2_verification_notes.md  git_workflow.md  issue_workflow.md  module_contracts.md  project_governance.md  protocol.md  reference_emulator_validation.md  reporting.md  reporting_policy.md  scoring_method.md  security.md  simulation_method.md  style.md  submodule_policy.md  tdd_policy.md  versioning.md  versioning_policy.md
issues/: ISSUE-0001-bootstrap-repository.md  ISSUE-0002-fast-push-ci-policy.md  ISSUE-0003-m1-planning-issue-expansion.md  ISSUE-0004-m0-audit-and-m1-go-decision.md  ISSUE-0005-github-actions-ci-introduction.md  ISSUE-0006-docs-issues-reports-governance-structure.md  ISSUE-0007-external-codec2-submodule-pin.md  ISSUE-0008-common-mode-interface-and-data-protocol-v010.md  ISSUE-0009-deterministic-simulation-core.md  ISSUE-0010-channel-model-v010.md  ISSUE-0011-ssb-reference-emulator.md  ISSUE-0012-freedv-700d-700e-official-baseline-adapter.md  ISSUE-0013-700d-700e-parameterized-emulator-skeleton.md  ISSUE-0014-metrics-and-result-artifact-format.md  ISSUE-0015-sweep-runner-v010.md  ISSUE-0016-m1-audit-report.md  ISSUE-0017-m2-planning-issue-expansion.md  ISSUE-0018-700f-candidate-architecture-rfc.md  ISSUE-0019-fec-uep-engine-prototype.md  ISSUE-0020-ofdm-waveform-candidate-prototype.md  ISSUE-0021-sync-impairment-estimator-prototype.md  ISSUE-0022-ai-assisted-sweep-triage.md  ISSUE-0023-m2-audit-and-candidate-downselect.md  ISSUE-0024-m2-scoring-model-and-comparison-policy.md  ISSUE-0025-m2-expanded-channel-condition-matrix.md  ISSUE-0026-m2-sweep-campaign-runner-config.md  ISSUE-0027-m2-baseline-comparison-report-generation.md  ISSUE-0028-m2-campaign-mode-registry-bridge.md  ISSUE-0029-ssb-audio-export.md  ISSUE-0030-sweep-cli-config-loader.md  ISSUE-0031-report-json-loader-cli.md  ISSUE-0032-700f-candidate-minimal-behavior-bridge.md  ISSUE-0033-700d-700e-emulator-minimal-behavior-bridge.md  ISSUE-0034-official-freedv-waveform-roundtrip.md  ISSUE-0035-clock-skew-warning-investigation.md  ISSUE-0036-codec2-runtime-linkage-mode-roundtrip.md  ISSUE-0037-codec2-on-ci-and-official-regression-smoke.md  ISSUE-0038-700f-waveform-capable-prototype-rfc.md  ISSUE-0039-700f-a-minimal-waveform-prototype.md  ISSUE-0040-m2-audit-update-after-700f-a-prototype.md  (+14 more)
modules/05_codec_adapter/: AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md
modules/05_codec_adapter/docs/: README.md  api_contract.md  limitations.md  module_spec.md  testing.md
modules/05_codec_adapter/include/f700f/codec_adapter/: freedv_official.hpp
modules/05_codec_adapter/issues/: ISSUE-0006-docs-issues-reports-governance-structure.md  ISSUE-0007-external-codec2-submodule-pin.md  ISSUE-0012-freedv-700d-700e-official-baseline-adapter.md  ISSUE-0034-official-freedv-waveform-roundtrip.md  README.md
modules/05_codec_adapter/reports/: README.md
modules/05_codec_adapter/src/: freedv_official.cpp
modules/07_ofdm_modem_waveform/: AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md
modules/07_ofdm_modem_waveform/docs/: README.md  api_contract.md  freedv_emulator_waveform_assumptions.md  limitations.md  module_spec.md  testing.md
modules/07_ofdm_modem_waveform/include/f700f/ofdm_modem_waveform/: carrier_layout.hpp
modules/07_ofdm_modem_waveform/issues/: ISSUE-0006-docs-issues-reports-governance-structure.md  ISSUE-0013-700d-700e-parameterized-emulator-skeleton.md  ISSUE-0039-700f-a-minimal-waveform-prototype.md  ISSUE-0042-700f-a-minimal-qpsk-baseband-prototype.md  ISSUE-0046-ofdm-carrier-layout-and-baseband-frame-prototype.md  ISSUE-0048-qpsk-timing-sync-placeholder.md  ISSUE-0050-frame-interleaver-placeholder.md  README.md
modules/07_ofdm_modem_waveform/reports/: 20260629_052912_issue0039_700f_a_waveform_prototype.md  README.md
modules/07_ofdm_modem_waveform/src/: carrier_layout.cpp
modules/07_ofdm_modem_waveform/tests/: test_ofdm_carrier_layout.cpp
reports/: 20260627_133600_m0_audit.md  20260627_230816_m0_audit.md  20260627_233328_m1a_integration.md  20260627_235907_m1b_integration.md  20260628_003710_m1c_integration.md  20260628_003929_m1_baseline_smoke.md  20260628_004200_m1_audit.md  20260628_214054_m2a_integration.md  20260628_223051_m2b_candidate_comparison.md  20260628_223051_m2b_integration.md  20260628_223051_m2b_smoke.md  20260628_230402_m2c_candidate_comparison.md  20260628_230402_m2c_integration.md  20260628_230402_m2c_smoke.md  20260628_235652_m2_limited_audit.md  20260629_003746_m2d_candidate_comparison.md  20260629_003746_m2d_partial_integration.md  20260629_003746_m2d_smoke.md  20260629_024549_m2e_candidate_comparison.md  20260629_024623_m2e_integration.md  20260629_024623_m2e_smoke.md  20260629_031147_m2f_candidate_comparison_codec2_off.md  20260629_031147_m2f_candidate_comparison_codec2_on.md  20260629_031346_issue0036_codec2_roundtrip.md  20260629_035219_issue0037_codec2_on_comparison.md  20260629_035619_issue0037_codec2_on_ci.md  20260629_052411_issue0039_m2g_comparison.md  20260629_052912_issue0039_700f_a_waveform_prototype.md  20260629_055947_m2_audit_update_after_700f_a.md  20260629_062002_real_700f_modem_rfc.md  20260629_080853_m2h_700f_qpsk_comparison.md  20260629_080853_m2h_700f_qpsk_comparison_codec2_on.md  20260629_081841_m2h_qpsk_prototype.md  20260629_123435_issue0045_m3_planning.md  20260629_133854_m3a_smoke_codec2_off.md  20260629_133854_m3a_smoke_codec2_on.md  20260629_134500_m3a_integration.md  README.md
src/: candidate_profiles.cpp
tests/: report_cli_contract.cmake  sweep_cli_missing_config_test.cmake  sweep_cli_smoke_test.cmake  test_700f_candidate_profiles.cpp  test_baseline_comparison_report.cpp  test_channel_models.cpp  test_freedv_emulator.cpp  test_freedv_official_adapter.cpp  test_metrics_result_artifacts.cpp  test_mode_interface.cpp  test_modem_frame_symbol_protocol.cpp  test_occupied_bandwidth.cpp  test_report_artifact_loader_cli.cpp  test_sweep_runner.cpp  (+4 more)
(+680 files in other folders)
