cmake_minimum_required(VERSION 3.25)
project(freedv700f_lab VERSION 0.0.1 LANGUAGES CXX)
option(F700F_ENABLE_CODEC2 "Enable integration points that require the external Codec2/FreeDV submodule" OFF)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(f700f_core INTERFACE)
target_include_directories(f700f_core INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
if(F700F_ENABLE_CODEC2)
  set(F700F_CODEC2_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/codec2)
  if(NOT EXISTS ${F700F_CODEC2_SOURCE_DIR}/src/freedv_api.h)
    message(FATAL_ERROR "F700F_ENABLE_CODEC2=ON requires initialized submodule external/codec2; run git submodule update --init external/codec2")
  endif()
  add_library(f700f_codec2_headers INTERFACE)
  target_include_directories(f700f_codec2_headers INTERFACE ${F700F_CODEC2_SOURCE_DIR}/src)
endif()
add_executable(f700f-info src/apps/f700f-info.cpp)
target_link_libraries(f700f-info PRIVATE f700f_core)
add_subdirectory(modules/11_pipeline_runner)
add_executable(test_mode_interface tests/test_mode_interface.cpp)
target_link_libraries(test_mode_interface PRIVATE f700f_core)
add_executable(test_simulation_pipeline tests/test_simulation_pipeline.cpp)
target_link_libraries(test_simulation_pipeline PRIVATE f700f_core f700f_pipeline_runner)
enable_testing()
add_test(NAME f700f_info_version COMMAND f700f-info)
add_test(NAME mode_interface_contract COMMAND test_mode_interface)
add_test(NAME simulation_pipeline_contract COMMAND test_simulation_pipeline)
